29-Nov-2003 by Matthias Braun
-fixed wrong read in blitWorld when we're rendering to lower right edge of the
 map.

28-Nov-2003 by Matthias Braun
-converted UI classes to use SDL_Surface

28-Nov-2003 by Michel Metzger
-first release of the new UI lib.
-add a temporary test panel to the game (F12)
	
26-Nov-2003 by Matthias Braun
-made scrolling in tilesetview working correctly
-template loading and saving in the editor should work now
-started working on map rendering code for the editor and future netpanzer
 versions

24-Nov-2003 by Hankin Chick
-created IRCLobbyServer, so IRCLobby should work by itself.
-fixed repeatitive mouse move/dragged messages even when mouse didn't move
-added scale/shade/dotsize buttons on the minimap

24-Nov-2003 by Matthias Braun
-converted the SelectionList to std::vector, also removed limit of maximum
 select units while doing this.
-eleminated the String class and replaced it with std::string
-eleminated the FileList class and replaced it with std::vector<std::string>

22-Nov-2003 by Matthias Braun
-big reorganisation. Created several real libs in the lib directory and moved
some stuff inside NetPanzer directory.

21-Nov-2003 by Matthias Braun
-Applied a patch by Michel Metzger (metzger@essi.fr) which makes it possible to
 select the location where built units move.
-added a possibility to use custom config files. This makes it possible to
 spawn several different bots or servers on the same user account.
-adding new tiles to Tileset works now in editor

20-Nov-2003 by Matthias Braun
-removed lots of remaining nonused code handling with UDP networking
-convert PlayerStats to use STL
-small robustness fixes for network
-only enable the signal handling for clean shutdown, when not compiling in debug
 mode
-added sound configuration variables
-removed stopIRC argument. No need to overly complicate commands. There already
 is sendIRCMessageLine.
-some fixes for valgrind complaints