@@ -30,7 +30,7 @@ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
 #include "Server.hpp"
 
-ObjectiveList ObjectiveInterface::objective_list;
+std::vector<Objective*> ObjectiveInterface::objective_list;
 
 unsigned long ObjectiveInterface::objective_position_enum_list_size;
 unsigned long ObjectiveInterface::objective_position_enum_index;
@@ -38,32 +38,25 @@ PlayerID      ObjectiveInterface::objective_position_enum_player_id;
 
 NetMessageEncoder ObjectiveInterface::message_encoder;
 
-void ObjectiveInterface::cleanUpObjectiveList( void )
+void ObjectiveInterface::cleanUpObjectiveList()
 {
-    unsigned long list_size;
-    unsigned long list_index;
-
-    list_size = objective_list.getSize();
-
-    for( list_index = 0; list_index < list_size; list_index++ ) {
-        if ( objective_list[ list_index ] != 0 ) {
-            delete( objective_list[ list_index ] );
-        }
+    std::vector<Objective*>::iterator i;
+    for(i = objective_list.begin(); i != objective_list.end(); i++) {
+        delete *i;
     }
 
-    objective_list.deallocate();
+    objective_list.clear();
 }
 
-void ObjectiveInterface::resetLogic( void )
+void ObjectiveInterface::resetLogic()
 {
     cleanUpObjectiveList();
 }
 
 void ObjectiveInterface::loadObjectiveList( const char *file_path )
 {
-    unsigned long objective_count;
-    unsigned long objective_index;
-    char comment[64];
+    size_t objective_count = 0;
+    char comment[64] = "";
 
     // XXX FIX THIS! Make it using physfs!!!
     FILE* infile = fopen(FileSystem::getRealName(file_path).c_str(), "rt" );
@@ -71,13 +64,13 @@ void ObjectiveInterface::loadObjectiveList( const char *file_path )
 
     cleanUpObjectiveList();
 
-    fscanf( infile, "%s %ld", comment, &objective_count );
-    objective_list.initialize( objective_count );
+    fscanf( infile, "%s %u", comment, &objective_count );
 
     unsigned long loc_x, loc_y;
     unsigned long world_x, world_y;
     char name[64];
-    for ( objective_index = 0; objective_index < objective_count; objective_index++ ) {
+    objective_list.clear();
+    for (size_t objective_index = 0; objective_index < objective_count; objective_index++ ) {
         Objective *objective_obj;
 
         fscanf( infile, "%s %s", comment, name );
@@ -91,7 +84,7 @@ void ObjectiveInterface::loadObjectiveList( const char *file_path )
 
         strcpy( objective_obj->objective_state.name, name );
 
-        objective_list.add( objective_obj, objective_index );
+        objective_list.push_back(objective_obj);
     } // ** for
 }
 
@@ -100,29 +93,23 @@ quearyObjectiveLocationStatus( iXY &loc,
                                PlayerID &player,
                                Objective **objective_ptr )
 {
-    unsigned long list_size;
-    unsigned long list_index;
-
-    list_size = objective_list.getSize();
-
-    for( list_index = 0; list_index < list_size; list_index++ ) {
-        ObjectiveState *objective_state;
-
-        objective_state = &objective_list[ list_index ]->objective_state;
+    std::vector<Objective*>::iterator i;
+    for(i = objective_list.begin(); i != objective_list.end(); i++) {
+        ObjectiveState *objective_state = & ((*i)->objective_state);
 
         if ( objective_state->selection_box.contains( loc ) == true ) {
             if ( objective_state->occupation_status == _occupation_status_occupied ) {
                 if ( player.getIndex() == objective_state->occupying_player.getIndex() ) {
-                    *objective_ptr = objective_list[ list_index ];
+                    *objective_ptr = *i;
                     return( _player_occupied_objective_found );
                 } // ** if
                 else {
-                    *objective_ptr = objective_list[ list_index ];
+                    *objective_ptr = *i;
                     return( _enemy_occupied_objective_found );
                 } // ** else
             } // ** if
             else {
-                *objective_ptr = objective_list[ list_index ];
+                *objective_ptr = *i;
                 return( _unoccupied_objective_found );
             } // ** else
         } // ** if
@@ -131,13 +118,13 @@ quearyObjectiveLocationStatus( iXY &loc,
     return( _no_objective_found );
 }
 
-void ObjectiveInterface::sendMessage( ObjectiveMessage *message )
+void ObjectiveInterface::sendMessage(ObjectiveMessage *message)
 {
-    objective_list[ message->objective_id ]->processMessage( message );
+    objective_list[message->objective_id]->processMessage( message );
 }
 
 
-void ObjectiveInterface::processNetMessages( NetMessage *message )
+void ObjectiveInterface::processNetMessages(NetMessage *message)
 {
     switch( message->message_id ) {
     case _net_message_id_occupation_status_update : {
@@ -159,40 +146,29 @@ void ObjectiveInterface::processNetMessages( NetMessage *message )
 
 }
 
-void ObjectiveInterface::updateObjectiveStatus( void )
+void ObjectiveInterface::updateObjectiveStatus()
 {
-    unsigned long list_size;
-    unsigned long list_index;
-
-    list_size = objective_list.getSize();
-
-    for( list_index = 0; list_index < list_size; list_index++ ) {
-        objective_list[ list_index ]->updateStatus();
+    std::vector<Objective*>::iterator i;
+    for(i = objective_list.begin(); i != objective_list.end(); i++) {
+        (*i)->updateStatus();
     }
 }
 
 void ObjectiveInterface::offloadGraphics( SpriteSorter &sorter )
 {
-    unsigned long list_size;
-    unsigned long list_index;
-
-    list_size = objective_list.getSize();
-
-    for( list_index = 0; list_index < list_size; list_index++ ) {
-        objective_list[ list_index ]->offloadGraphics( sorter );
+    std::vector<Objective*>::iterator i;
+    for(i = objective_list.begin(); i != objective_list.end(); i++) {
+        (*i)->offloadGraphics(sorter);
     }
 }
 
 
 bool ObjectiveInterface::
-testRuleObjectiveOccupationRatio( unsigned short player_index, float precentage )
+testRuleObjectiveOccupationRatio(unsigned short player_index, float precentage)
 {
-    unsigned long list_size;
-    unsigned long list_index;
+    size_t list_size = objective_list.size();
     long occupation_ratio;
     long occupied;
-
-    list_size = objective_list.getSize();
 
     occupied = 0;
     occupation_ratio = (unsigned long) ( ((float) list_size) * precentage );
@@ -200,10 +176,9 @@ testRuleObjectiveOccupationRatio( unsigned short player_index, float precentage 
     if ( occupation_ratio <= 0 )
         occupation_ratio = 1;
 
-    for( list_index = 0; list_index < list_size; list_index++ ) {
-        ObjectiveState *objective_state;
-
-        objective_state = &objective_list[ list_index ]->objective_state;
+    std::vector<Objective*>::iterator i;
+    for(i = objective_list.begin(); i != objective_list.end(); i++) {
+        ObjectiveState *objective_state = & ((*i)->objective_state);
 
         if (  objective_state->occupation_status == _occupation_status_occupied ) {
             unsigned short occuping_player_index;
@@ -233,54 +208,38 @@ void ObjectiveInterface::disownPlayerObjectives( PlayerID &player )
 {
     DisownPlayerObjective disown_player_objective;
 
-    unsigned long list_index;
-    unsigned long list_size;
-
-    list_size = objective_list.getSize();
-
-    for( list_index = 0; list_index < list_size; list_index++ ) {
-        disown_player_objective.set( list_index, player );
-        sendMessage( &disown_player_objective );
+    for(size_t i = 0; i < objective_list.size(); i++) {
+        disown_player_objective.set(i, player);
+        sendMessage(&disown_player_objective);
     }
 }
 
 ObjectiveState * ObjectiveInterface::getObjectiveState( short objective_id )
 {
-    unsigned long list_size;
-
-    list_size = objective_list.getSize();
-
-    assert(objective_id < short(list_size));
-
-    return( &(objective_list[ objective_id ]->objective_state) );
+    return & (objective_list.at(objective_id)->objective_state);
 }
 
 OutpostStatus ObjectiveInterface::getOutpostStatus( short objective_id )
 {
-    unsigned long list_size;
     OutpostStatus outpost_status;
-    Outpost *outpost_ptr;
-
-    list_size = objective_list.getSize();
-
-    assert(objective_id < short(list_size));
-
-    outpost_ptr = (Outpost *) (objective_list[ objective_id ]);
+    
+    Outpost *outpost_ptr 
+        = dynamic_cast<Outpost*> (objective_list.at(objective_id));
 
     outpost_ptr->getOutpostStatus( outpost_status );
 
-    return( outpost_status );
+    return outpost_status;
 }
 
-
-void ObjectiveInterface::startObjectivePositionEnumeration( void )
+void ObjectiveInterface::startObjectivePositionEnumeration()
 {
     objective_position_enum_index	= 0;
-    objective_position_enum_list_size = objective_list.getSize();
+    objective_position_enum_list_size = objective_list.size();
     objective_position_enum_player_id = PlayerInterface::getLocalPlayerID();
 }
 
-bool ObjectiveInterface::objectivePositionEnumeration( iRect *objective_rect, unsigned char *objective_disposition, int *objective_id  )
+bool ObjectiveInterface::objectivePositionEnumeration(iRect *objective_rect,
+        unsigned char *objective_disposition, int *objective_id)
 {
     ObjectiveState *objective_state;
 
@@ -315,17 +274,14 @@ bool ObjectiveInterface::objectivePositionEnumeration( iRect *objective_rect, un
 
 void ObjectiveInterface::syncObjectives( PlayerID connect_player )
 {
-    unsigned long list_index;
-    unsigned long list_size;
     ObjectiveSyncMesg sync_mesg;
     MultiMessage *encode_message;
 
     message_encoder.resetEncoder();
 
-    list_size = objective_list.getSize();
-
-    for( list_index = 0; list_index < list_size; list_index++ ) {
-        objective_list[ list_index ]->getSyncData( sync_mesg.sync_data );
+    std::vector<Objective*>::iterator i;
+    for(i = objective_list.begin(); i != objective_list.end(); i++) {
+        (*i)->getSyncData( sync_mesg.sync_data );
 
         while ( message_encoder.encodeMessage( &sync_mesg, sizeof(ObjectiveSyncMesg), &encode_message ) ) {
             SERVER->sendMessage( connect_player, encode_message,
@@ -341,7 +297,7 @@ void ObjectiveInterface::syncObjectives( PlayerID connect_player )
     } // ** if
 }
 
-void ObjectiveInterface::updatePlayerObjectiveCounts( void )
+void ObjectiveInterface::updatePlayerObjectiveCounts()
 {
     unsigned long player_index, player_count;
     PlayerState *player_state = 0;
@@ -353,15 +309,9 @@ void ObjectiveInterface::updatePlayerObjectiveCounts( void )
         player_state->setObjectivesHeld( 0 );
     }
 
-    unsigned long list_index;
-    unsigned long list_size;
-
-    list_size = objective_list.getSize();
-
-    for( list_index = 0; list_index < list_size; list_index++ ) {
-        ObjectiveState *objective_state;
-
-        objective_state = &objective_list[ list_index ]->objective_state;
+    std::vector<Objective*>::iterator i;
+    for(i = objective_list.begin(); i != objective_list.end(); i++) {
+        ObjectiveState *objective_state = & ((*i)->objective_state);
 
         if( objective_state->occupation_status == _occupation_status_occupied ) {
             player_state = PlayerInterface::getPlayerState( objective_state->occupying_player);
