@@ -1,3 +1,7 @@
+01-Dec-2003 by Matthias Braun
+-eleminated a few more valgrind warnings
+-converted an ArrayTemplate in ObjectiveInterface to an std::vector
+
 29-Nov-2003 by Matthias Braun
 -fixed wrong read in blitWorld when we're rendering to lower right edge of the
  map.
